completed final assignment

--- a/CSS-Company-Portfolio/assets/css/index.css
+++ b/CSS-Company-Portfolio/assets/css/index.css
@@ -16,7 +16,7 @@
 
 /* styling for mainbox */
 .main {
-    background-image: url(./assets/images/background.jpg);
+    background-image: url(background.jpg)
 }
 
 .main img {
